fixed scroll and z-index

--- a/Echo/frontend-service/src/main/resources/static/styles/error_page.css
+++ b/Echo/frontend-service/src/main/resources/static/styles/error_page.css
@@ -1,3 +1,9 @@
+.error_body{
+    overflow: hidden;
+    background-color: #eaf1f8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .error_page {
     margin: 0;
     padding: 0;
