--- a/Echo/frontend-service/src/main/resources/static/styles/header.css
+++ b/Echo/frontend-service/src/main/resources/static/styles/header.css
@@ -11,7 +11,7 @@
     position: fixed;
     width: 100%;
     box-sizing: border-box;
-    z-index: 50;
+    z-index: 9;
 }
 
 .header_search {
