--- a/Echo/frontend-service/src/main/resources/static/styles/register_form.css
+++ b/Echo/frontend-service/src/main/resources/static/styles/register_form.css
@@ -15,7 +15,7 @@
     justify-content: center; 
     border-radius: 50px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); 
-    z-index: 2;
+    z-index: 12;
 }
 
 
@@ -105,7 +105,8 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.75);
-    z-index: 1; 
+    z-index: 10; 
+    overflow: hidden;
 }
 
 .hide{
@@ -123,4 +124,8 @@
     font-size: 14px;
     color: red;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body.no-scroll {
+    overflow: hidden; /* Забороняє прокручування */
 }
